--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
 	<div class="container">
 
 		<div class="header">
+			
 			<div class="calendarlayout">
 				
-				<div class="calendar-header">calendar-header</div>	
-				<div class="calendar-welcome">calendar-welcome</div>	
+				<div class="calendar-header">Сентябрь 2013</div>	
+				<div class="calendar-welcome">Выбранный день</div>	
 				<table class="calendargrid">
 					<tr><th>ВС</th><th>ПН</th><th>ВТ</th><th>СР</th><th>ЧТ</th><th>ПТ</th><th>СБ</th></tr>
 					<tr><td>26</td><td>27</td><td>28</td><td>29</td><td>30</td><td>1</td><td>2</td></tr>
@@ -32,6 +33,7 @@
 				<div class="calendar-selecteddate">calendar-selecteddate</div>
 								
 			</div>	
+
 			<div class="logo"><b>MakeMy</b>Day</div>
 			<div class="logotxt">
 				<b>Мы</b> поможем Вам <br>
