--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="calendar.css">
 	<title>MakeMy</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
