Работа над календарём

--- a/index2.html
+++ b/index2.html
@@ -25,7 +25,21 @@
 					<tr><td>24</td><td>25</td><td>26</td><td>27</td><td>28</td><td>29</td><td>30</td></tr>
 					<tr><td>31</td><td class="nocur">1</td><td class="nocur">2</td><td class="nocur">3</td><td class="nocur">4</td><td class="nocur">5</td><td class="nocur">6</td></tr>
 				</table>
-				<div class="calendar-selecteddate">calendar-selecteddate</div>
+				<div class="calendar-selecteddate">
+					<div class="line"></div>
+					<br>
+					<H1>22</H1>
+					<H2>сентябрь 2013</H2>
+					
+					<ul>
+						<li>заварить чай</li>
+						<li>дописать проект</li>
+						<li>сходить к врачу</li>
+						<li>побегать</li>
+					</ul>
+					<H3>больше событий</H3>
+
+			    </div>
 								
 			</div>	
 
