Сменил разметку календаря, добавил стрелки

--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
 			
 			<div class="calendarlayout">
 				
-				<div class="calendar-header">Сентябрь 2013</div>	
+				<div class="calendar-header">
+					<div class="back-arrow"> </div>
+					Сентябрь 2013
+					<div class="forw-arrow"> </div>
+				</div>	
 				<div class="calendar-welcome"></div>	
 				<table class="calendargrid">
 					<tr><th>ВС</th><th>ПН</th><th>ВТ</th><th>СР</th><th>ЧТ</th><th>ПТ</th><th>СБ</th></tr>
