--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 	<script type="text/javascript" src="js/jquery-1.3.min.js" charset="utf-8"></script>
 	<script type="text/javascript" src="js/menu3.js" charset="utf-8"></script>
+	<script type="text/javascript" src="js/calendar.js" charset="utf-8"></script>
 
 
 
