--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 				<div class="calendar-welcome"></div>	
 				<table class="calendargrid">
 					<tr><th>ВС</th><th>ПН</th><th>ВТ</th><th>СР</th><th>ЧТ</th><th>ПТ</th><th>СБ</th></tr>
-					<tr><td class="nocur">26</td><td class="nocur">27</td><td class="nocur">28</td><td class="nocur">29</td><td class="nocur">30</td><td>1</td><td>2</td></tr>
-					<tr><td>3</td><td>4</td><td>5</td><td>6</td><td>7</td><td>8</td><td>9</td></tr>
-					<tr><td>10</td><td>11</td><td>12</td><td>13</td><td>14</td><td>15</td><td>16</td></tr>
-					<tr><td>17</td><td>18</td><td>19</td><td>20</td><td>21</td><td>22</td><td>23</td></tr>
-					<tr><td>24</td><td>25</td><td>26</td><td>27</td><td>28</td><td>29</td><td>30</td></tr>
-					<tr><td>31</td><td class="nocur">1</td><td class="nocur">2</td><td class="nocur">3</td><td class="nocur">4</td><td class="nocur">5</td><td class="nocur">6</td></tr>
+					<tr><td class="nocur"></td><td class="nocur"></td><td class="nocur"></td><td class="nocur"></td><td class="nocur"></td><td></td><td></td></tr>
+					<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+					<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+					<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+					<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+					<tr><td></td><td class="nocur"></td><td class="nocur"></td><td class="nocur"></td><td class="nocur"></td><td class="nocur"></td><td class="nocur"></td></tr>
 				</table>
 				<div class="calendar-selecteddate">
 					<div class="line"></div>
