--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 	<script type="text/javascript" src="js/jquery-1.3.min.js" charset="utf-8"></script>
 	<script type="text/javascript" src="js/menu3.js" charset="utf-8"></script>
-	<script type="text/javascript" src="js/calendar.js" charset="utf-8"></script>
+	
+	<script type="text/javascript" src="js/calendar2.js" charset="utf-8"></script>
 
 
 
@@ -29,12 +30,12 @@
 				<div class="calendar-welcome"></div>	
 				<table class="calendargrid">
 					<tr><th>ВС</th><th>ПН</th><th>ВТ</th><th>СР</th><th>ЧТ</th><th>ПТ</th><th>СБ</th></tr>
-					<tr><td class="nocur"></td><td class="nocur"></td><td class="nocur"></td><td class="nocur"></td><td class="nocur"></td><td></td><td></td></tr>
 					<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
 					<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
 					<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
 					<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-					<tr><td></td><td class="nocur"></td><td class="nocur"></td><td class="nocur"></td><td class="nocur"></td><td class="nocur"></td><td class="nocur"></td></tr>
+					<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+					<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
 				</table>
 				<div class="calendar-selecteddate">
 					<div class="line"></div>
