--- a/auth.html
+++ b/auth.html
@@ -23,13 +23,10 @@
     <div class="authorization"> Вы зашли как <b>Гость</b> </div>
   </div>
   <div class="content">
-    <div class="left-content"> </div>
-    <div class="left-title"><b>Вход</b></div>
-    <div class="left-text">если вы уже зарегистрированы введите пожалуйста свой <br>
-      e-mail и пароль для входа</div>
-    <div class = "auth-form-cont"> 
-      <!-- <div class="auth-email">e-mail</div>
-      <div class="auth-pass">пароль</div>-->
+    <div class="left-content">
+      <div class="left-title"><b>Вход</b></div>
+      <div class="left-text">если вы уже зарегистрированы введите пожалуйста свой <br>
+        e-mail и пароль для входа</div>
       <div class="input"> email
         <INPUT type="text" name="emailin" size="30">
         <BR>
@@ -48,42 +45,53 @@
       <div class="right-title"><b>Регистрация</b></div>
       <div class="right-text">заполните пожалуйста регистрационную форму, чтобы <br>
         зарегистрироваться на нашем сайте</div>
-      <div class = "auth-form-cont-right">
-        <div class="input-right"> <BR>
-          <BR>
-          email
-          <INPUT type="text" name="emailr" size="30">
-          <BR>
-          <BR>
-          пароль
-          <INPUT type="password" name="passir" size="30">
-          <BR>
-          <BR>
-          никнейм
-          <INPUT type="text" name="nikr" size="30">
-          <BR>
-          <BR>
-          имя
-          <INPUT type="text" name="namer" size="30">
-          <BR>
-          <BR>
-          фамилия
-          <INPUT type="text" name="surnr" size="30">
-          <BR>
-          <BR>
-          отчество
-          <INPUT type="text" name="fathr" size="30">
-          <BR>
-          <BR>
-        </div>
+      <div class="input-right"> <BR>
+        <BR>
+        email
+        <INPUT type="text" name="emailr" size="30">
+        <BR>
+        <BR>
+        пароль
+        <INPUT type="password" name="passir" size="30">
+        <BR>
+        <BR>
+        никнейм
+        <INPUT type="text" name="nikr" size="30">
+        <BR>
+        <BR>
+        имя
+        <INPUT type="text" name="namer" size="30">
+        <BR>
+        <BR>
+        фамилия
+        <INPUT type="text" name="surnr" size="30">
+        <BR>
+        <BR>
+        отчество
+        <INPUT type="text" name="fathr" size="30">
+        <BR>
+        <BR>
       </div>
       <div class="right-text-bottom">После того как Вы нажмёте кнопку “Зарегистрироваться” на ваш <BR>
         e-mail сразу будет выслано письмо со ссылкой о подтверждении <BR>
         регистрации. Более подробную информацию о себе и настройки <BR>
         аккаунта Вы сможете указать в личном кабинете после <BR>
         подтверждения регистрации.</div>
+      <div class="right-submit">
+        <ul class="submit-button-right">
+          <li class="submit-right">Зарегестрироваться</li>
+        </ul>
+      </div>
     </div>
   </div>
+  <div class="buttonbar-content-bottom">
+      <ul id = "navigation-bottom">
+        <li class = "main"><a href="#">ГЛАВНАЯ</a></li>
+        <li class = "contacts"><a href="#">КОНТАКТЫ</a></li>
+        <li class = "about"><a href="#">О НАС</a></li>
+      </ul>
+    </div>
+</div>
 </div>
 </body>
 </html>
