--- a/index.html
+++ b/index.html
@@ -126,11 +126,13 @@
         создано событий: <b>66</b><br>
         любимое событие: <b>заварить чай</b><br>
       </div>
-      <div class = "userbutton">
-        <ul class="buttonmenu">
-           <a href="addeventform.html"><li class="addbutton">Новое событие</li>
+      
+      <div class = "userbuttonadd">
+        <ul>
+          <li><a href="addeventform.html">Новое событие</a></li>
         </ul>
       </div>
+      
     </div>
     <div class="contentcontent">
       <div class="menu">
